# Shad4Fasthtml

./: README.md  component_list.txt  globals.css  icons.py  llms-ctx.txt  llms.txt  main.py  md_theme.js  output.css  requirements.txt  shadcn.py  shadscripts.js  tailwind.config.js
.github/: FUNDING.yml
docs/: comp_code.py  comp_demos.py
docs/md/: accordion_template.md  ai_assistance.md  alert_template.md  aspect_ratio_template.md  avatar_template.md  badge_template.md  breadcrumb_template.md  button_template.md  card_template.md  carousel_template.md  checkbox_template.md  collapsible_template.md  dialog_template.md  getting_started.md  input_template.md  label_template.md  nav_template.md  progress_template.md  radio_template.md  scroll_area_template.md  select_template.md  sheet_template.md  (+16 more)
lucide4py/: __init__.py  core.py  icons.py  lucide.py  lucide.pyi  requirements.txt
shad4fast/: LICENSE.txt  README.md  __init__.py  headers.py  pyproject.toml  setup.py  shadcn.py  v0-prompt.txt
shad4fast/components/: __init__.py  alert.py  card.py  carousel.py  checkbox.py  dialog.py  input.py  radio.py  select.py  select.pyi  sheet.py  slider.py  tabs.py  toast.py
shad4fast/js/: dialog.js  radio.js  select.js  sheet.js
shad4fast/src/shad4fast/: __about__.py  __init__.py  cli.py  headers.py
shad4fast/src/shad4fast/components/: __init__.py  accordion.py  alert.py  aspect_ratio.py  avatar.py  badge.py  breadcrumb.py  button.py  card.py  carousel.py  checkbox.py  collapsible.py  dialog.py  input.py  label.py  nav.py  progress.py  radio.py  scroll_area.py  select.py  separator.py  sheet.py  skeleton.py  slider.py  switch.py  table.py  tabs.py  textarea.py  toast.py  toggle.py  tooltip.py
shad4fast/src/shad4fast/js/: carousel.js  dialog.js  main_scripts.js  select.js  sheet.js  slider.js  tabs.js  theme.js  toast.js
shad4fast/tests/: __init__.py
shadcn4fast/: shadcn.py
